--- a/assets/lumino/css/styles.css
+++ b/assets/lumino/css/styles.css
@@ -7,7 +7,8 @@ Version 1.0
 /*Global Styles*/
 
 body {
-	background: #f1f4f7;
+	background-color: #f1f4f7;
+	background-image: url('bg-side.png');
 	padding-top: 50px;
 	color: #5f6468;
 }
@@ -552,6 +553,7 @@ a.bg-danger:hover {
 		overflow-x: hidden;
 		overflow-y: auto; 
 		background-color: #fff;
+		/*background-image: url('bg-side.png');*/
 		box-shadow: 1px 0px 10px rgba(0, 0, 0, .05);
 	}
 	.navbar-header {
